Time: 5 ms (10.55%), Space: 42.1 MB (34.35%) - LeetHub